# simple-order

./: .flake8  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  django_web_utils  pyproject.toml
.github/workflows/: python-ci.yml
deployment/: nginx.conf  setup.sh  simple-order.service  uwsgi.ini
deployment/static/: file_browser  monitoring  simple_order
docker/: prepare.sh
simple_order/: manage.py  settings.py  urls.py  wsgi.py
simple_order/base/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
simple_order/base/management/commands/: dump.py
simple_order/base/migrations/: 0001_initial.py
simple_order/base/templates/: 404.html  500.html  base.html  common.html
simple_order/base/templates/base/: customer.html  customers.html  deliveries.html  delivery.html  delivery_details.html  delivery_summary.html  order.html  order_invoice.html  orders.html  product.html  products.html
simple_order/base/templates/registration/: login.html
simple_order/scripts/: control.py  manage.py  nginx.conf  simple-order.service  uwsgi.ini
simple_order/static/simple_order/: jsu  odm
simple_order/static/simple_order/css/: base.css  print.css  structure.css  table.css
simple_order/static/simple_order/js/: clock.js
